dataset/local/tf_lambda_env_var_encryption/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-env-var-encryption
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-env-var-encryption
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-env-var-encryption
    kind: Plan
    resources:
      - bad-plan
    result: fail
